Refactor: Simplify generics usage, enhance data handling, and introduce reflection-based functionality across core, UI factories, and services.